Add navbar, hero layout, and sticky footer with Flexbox

--- a/about.html
+++ b/about.html
@@ -21,32 +21,7 @@
       </nav>
     </header>
 
-    <section class="hero">
-      <div class="hero-text">
-        <h2>Hi, I'm Mamoon.</h2>
-        <h3>Software Engineer</h3>
-
-        <p>
-          A self-driven and determined individual with a passion for software
-          and systems. Committed to solving real-world problems.
-        </p>
-
-        <div class="socials">
-          <a href="#">GitHub</a>
-          <a href="#">LinkedIn</a>
-          <a href="#">Twitter</a>
-        </div>
-
-        <a href="about.html" class="btn">Read More →</a>
-      </div>
-
-      <div class="hero-image">
-        <img
-          src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
-          alt="Profile photo"
-        />
-      </div>
-    </section>
+    <main></main>
 
     <footer class="footer">
       <p>© 2026 Mamoon Chishti. All rights reserved.</p>
