--- a/about.html
+++ b/about.html
@@ -21,10 +21,100 @@
       </nav>
     </header>
 
-    <main></main>
+    <section class="about">
+      <div class="about-text">
+        <h2>About Me</h2>
+
+        <div class="about-info">
+          <p>
+            Computer Science student at FAST NUCES Lahore with a passion for
+            building robust applications and solving complex problems. With
+            expertise in full-stack development, system programming, and cloud
+            technologies, I create efficient and scalable solutions that make a
+            difference.
+          </p>
+        </div>
+
+        <h2>Professional Skillset</h2>
+        <div class="svgs">
+          <div>
+            <img src="./images/icons/cplusplus.svg" alt="C++" />
+          </div>
+
+          <div>
+            <img src="./images/icons/c.svg" alt="C" />
+          </div>
+
+          <div>
+            <img src="images/icons/python.svg" alt="python" />
+          </div>
+
+          <div>
+            <img src="./images/icons/nodedotjs.svg" alt="node" />
+          </div>
+
+          <div>
+            <img src="./images/icons/typescript.svg" alt="typescript" />
+          </div>
+
+          <div>
+            <img src="./images/icons/express.svg" alt="Express" />
+          </div>
+
+          <div>
+            <img src="./images/icons/nestjs.svg" alt="Nest" />
+          </div>
+
+          <div>
+            <img src="./images/icons/react.svg" alt="React" />
+          </div>
+
+          <div>
+            <img src="./images/icons/nextdotjs.svg" alt="Next" />
+          </div>
+
+          <div>
+            <img src="./images/icons/mongodb.svg" alt="MongoDB" />
+          </div>
+
+          <div>
+            <img src="./images/icons/postgresql.svg" alt="PostgreSQL" />
+          </div>
+        </div>
+
+        <h2>Softwares I use</h2>
+        <div class="svgs">
+          <div>
+            <img src="./images/icons/linux.svg" alt="linux" />
+          </div>
+
+          <div>
+            <img src="./images/icons/jupyter.svg" alt="jupyter" />
+          </div>
+
+          <div>
+            <img
+              src="images/icons/visual-studio-code-svgrepo-com.svg"
+              alt="vscode"
+            />
+          </div>
+        </div>
+
+        <h2>Services I offer</h2>
+        <!-- Insert the github part -->
+      </div>
+    </section>
 
     <footer class="footer">
-      <p>© 2026 Mamoon Chishti. All rights reserved.</p>
+      <div class="footer-content">
+        <div class="footer-center">
+          © 2026 Mamoon Chishti. All rights reserved.
+        </div>
+        <div class="footer-right">
+          <a href="#">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
