--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,15 @@
     <main></main>
 
     <footer class="footer">
-      <p>© 2026 Mamoon Chishti. All rights reserved.</p>
+      <div class="footer-content">
+        <div class="footer-center">
+          © 2026 Mamoon Chishti. All rights reserved.
+        </div>
+        <div class="footer-right">
+          <a href="#">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
