--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <div class="socials">
           <a href="#">GitHub</a>
           <a href="#">LinkedIn</a>
-          <a href="#">Twitter</a>
         </div>
 
         <a href="about.html" class="btn">Read More →</a>
@@ -49,7 +48,15 @@
     </section>
 
     <footer class="footer">
-      <p>© 2026 Mamoon Chishti. All rights reserved.</p>
+      <div class="footer-content">
+        <div class="footer-center">
+          © 2026 Mamoon Chishti. All rights reserved.
+        </div>
+        <div class="footer-right">
+          <a href="#">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
