Completed About page

--- a/about.html
+++ b/about.html
@@ -42,10 +42,6 @@
           </div>
 
           <div>
-            <img src="./images/icons/c.svg" alt="C" />
-          </div>
-
-          <div>
             <img src="images/icons/python.svg" alt="python" />
           </div>
 
@@ -101,7 +97,90 @@
         </div>
 
         <h2>Services I offer</h2>
-        <!-- Insert the github part -->
+        <div class="services">
+          <div class="service-card">
+            <div class="service-icon">
+              <img src="./images/icons/brackets-angle.svg" alt="fullstack" />
+            </div>
+
+            <h3>Full Stack Development</h3>
+            <p>
+              Building scalable web applications with Node.js, React, Next.js,
+              and modern databases like PostgreSQL and MongoDB.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <img
+                src="./images/icons/device-mobile.svg"
+                alt="system-programming"
+              />
+            </div>
+
+            <h3>System Programming</h3>
+            <p>
+              Developing performance-critical and low-level software using C++,
+              C, and deep system-level concepts including memory management,
+              concurrency, and OS internals.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <img
+                src="./images/icons/server.svg"
+                alt="restful-api-development"
+              />
+            </div>
+
+            <h3>RESTful API Development</h3>
+            <p>
+              Creating secure, maintainable, and scalable REST APIs using
+              Express.js and NestJS, with authentication, authorization, and
+              best-practice architecture.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <img src="./images/icons/database.svg" alt="database-design" />
+            </div>
+
+            <h3>Database Architecture & Optimization</h3>
+            <p>
+              Designing and optimizing relational and non-relational databases,
+              focusing on schema design, indexing strategies, query
+              optimization, and data integrity.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <img src="./images/icons/cloud-code.svg" alt="cloud" />
+            </div>
+
+            <h3>DevOps & Cloud Engineering</h3>
+            <p>
+              Designing, deploying, and maintaining reliable infrastructure with
+              Docker, CI/CD pipelines, Linux, cloud platforms (AWS/GCP/Azure),
+              and infrastructure automation for scalable production systems.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <img src="./images/icons/clock-code.svg" alt="algorithms" />
+            </div>
+
+            <h3>Algorithms & Problem Solving</h3>
+            <p>
+              Strong background in data structures, algorithms, and
+              computational problem solving, with a focus on efficiency,
+              correctness, and scalability.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
