Projects page done

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,65 @@
       </nav>
     </header>
 
-    <main></main>
+    <section class="projects">
+      <div class="project-grid">
+        <h2>Featured Projects</h2>
+
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              alt="HydroGrid app interface screenshot"
+            />
+          </div>
+          <h3>HydroGrid</h3>
+          <p>
+            Production-ready NestJS app with PostgreSQL, AWS deployment, S3
+            storage, and maps integration for plant operations management.
+          </p>
+          <div class="project-link">
+            <a href="#">GitHub</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              alt="SpendSense app interface screenshot"
+            />
+          </div>
+          <h3>SpendSense</h3>
+          <p>
+            Budget tracker app built with NestJS and React TypeScript for
+            managing personal finances, tracking expenses, and visualizing
+            spending patterns with intuitive charts.
+          </p>
+          <div class="project-link">
+            <a href="#">GitHub</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              alt="WorkDesk app interface screenshot"
+            />
+          </div>
+          <h3>WorkDesk</h3>
+          <p>
+            A sleek, modern client and invoice management system built with
+            Python, CustomTkinter, and MySQL, designed for freelancers,
+            agencies, or small businesses to efficiently manage clients, tasks,
+            and payments.
+          </p>
+          <div class="project-link">
+            <a href="#">GitHub</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="footer-content">
