Made experience page & Updated Navigation list header

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="misc.html">Misc</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -28,7 +28,7 @@
         <div class="project-card">
           <div class="project-image">
             <img
-              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              src="./images/image-unload.jpg"
               alt="HydroGrid app interface screenshot"
             />
           </div>
@@ -45,7 +45,7 @@
         <div class="project-card">
           <div class="project-image">
             <img
-              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              src="./images/image-unload.jpg"
               alt="SpendSense app interface screenshot"
             />
           </div>
@@ -63,7 +63,7 @@
         <div class="project-card">
           <div class="project-image">
             <img
-              src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
+              src="./images/image-unload.jpg"
               alt="WorkDesk app interface screenshot"
             />
           </div>
