--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="misc.html">Misc</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -40,10 +40,7 @@
       </div>
 
       <div class="hero-image">
-        <img
-          src="./images/0921fc87aa989330b8d403014bf4f340.jpg"
-          alt="Profile photo"
-        />
+        <img src="./images/pfp.jpg" alt="Profile photo" />
       </div>
     </section>
 
