--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <header class="navbar">
-      <h1 class="logo">Mamoon</h1>
-
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
@@ -21,7 +19,26 @@
       </nav>
     </header>
 
-    <main></main>
+    <main class="form">
+      <h3>Contact</h3>
+      <h2>Get In Touch</h2>
+
+      <form action="https://formspree.io/f/xdalnzqb" method="POST">
+        <label for="name">Your Name</label>
+        <input id="name" type="text" name="name" required />
+
+        <label for="email">Your Email</label>
+        <input id="email" type="email" name="email" required />
+
+        <label for="subject">Subject</label>
+        <input id="subject" type="text" name="subject" required />
+
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </main>
 
     <footer class="footer">
       <div class="footer-content">
