Updated contact form page & font across app

--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mamoon Chishti</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
@@ -22,7 +28,6 @@
     <section class="about">
       <div class="about-text">
         <h2>About Me</h2>
-
         <div class="about-info">
           <p>
             Computer Science student at FAST NUCES Lahore with a passion for
