--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mamoon Chishti</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
@@ -20,60 +26,102 @@
     </header>
 
     <main class="experience-main">
-      <section class="experience">
-        <h2>Experience</h2>
-        <div class="experience-grid">
-          <div class="experience-card">
-            <h3>Full Stack Developer Intern | Vision Technologies</h3>
-            <span class="role-dates">Jun. 2023 – Jul. 2023</span>
-            <ul>
-              <li>
-                Assisted in developing and maintaining web applications using
-                [React, NestJS, Postgres], contributing to key project features.
-              </li>
-              <li>
-                Collaborated with the development team to implement bug fixes,
-                optimize performance, and improve code quality.
-              </li>
-              <li>
-                Participated in the deployment process and conducted testing to
-                ensure smooth application functionality.
-              </li>
-              <li>
-                Gained hands-on experience in full-stack development and agile
-                workflows within a professional environment.
-              </li>
-            </ul>
+      <h1 class="exp-title">Experience & Education</h1>
+      <p class="exp-subtitle">
+        A chronological overview of my professional and academic journey
+      </p>
+
+      <!-- Education Section -->
+      <section class="exp-section">
+        <h2 class="section-heading">Education</h2>
+        <div class="exp-card">
+          <div class="card-header">
+            <div>
+              <h3 class="card-title">
+                Bachelor of Science in Computer Science
+              </h3>
+              <p class="card-org">FAST-NUCES, Lahore</p>
+            </div>
+            <span class="card-period">2023 - 2027</span>
           </div>
+          <span class="status-tag">In Progress</span>
         </div>
       </section>
 
-      <section class="leadership-roles">
-        <h2>Leadership Experience</h2>
-        <div class="roles-grid">
-          <div class="roles-card">
-            <h3>President - Debate Society | Pak-Turk Maarif</h3>
-            <span class="role-dates">2021 – 2023</span>
-            <p>
+      <!-- Work Experience Section -->
+      <section class="exp-section">
+        <h2 class="section-heading">Work Experience</h2>
+        <div class="exp-card">
+          <div class="card-header">
+            <div>
+              <h3 class="card-title">Full Stack Developer Intern</h3>
+              <p class="card-org">Vision Technologies</p>
+            </div>
+            <span class="card-period">Jun - Jul 2023</span>
+          </div>
+          <ul class="card-details">
+            <li>
+              Developed and maintained web applications using React, NestJS, and
+              PostgreSQL, contributing to key project features
+            </li>
+            <li>
+              Collaborated with development team to implement bug fixes,
+              optimize performance, and improve code quality
+            </li>
+            <li>
+              Participated in deployment process and conducted testing to ensure
+              smooth application functionality
+            </li>
+            <li>
+              Gained hands-on experience in full-stack development and agile
+              workflows
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Leadership Section -->
+      <section class="exp-section">
+        <h2 class="section-heading">Leadership & Activities</h2>
+        <div class="leadership-grid">
+          <div class="exp-card">
+            <div class="card-header">
+              <div>
+                <h3 class="card-title">President - Debate Society</h3>
+                <p class="card-org">Pak-Turk Maarif</p>
+              </div>
+              <span class="card-period">2021 - 2023</span>
+            </div>
+            <p class="card-desc">
               Led debate training sessions, organized internal and external
               events, and selected teams for national competitions to elevate
               the school's debate culture.
             </p>
           </div>
 
-          <div class="roles-card">
-            <h3>President - PTMUN’22 | Pak-Turk Maarif</h3>
-            <span class="role-dates">Feb. 2022</span>
-            <p>
-              Revived and led the school’s flagship MUN conference, initiating
+          <div class="exp-card">
+            <div class="card-header">
+              <div>
+                <h3 class="card-title">President - PTMUN'22</h3>
+                <p class="card-org">Pak-Turk Maarif</p>
+              </div>
+              <span class="card-period">Feb 2022</span>
+            </div>
+            <p class="card-desc">
+              Revived and led the school's flagship MUN conference, initiating
               its return and overseeing all executive operations.
             </p>
           </div>
 
-          <div class="roles-card roles-card-center">
-            <h3>IT Director - PTMUN III | Pak-Turk Maarif</h3>
-            <span class="role-dates">Nov. 2022</span>
-            <p>
+          <div class="exp-card card-center">
+            <div class="card-header">
+              <div>
+                <h3 class="card-title">IT Director - PTMUN III</h3>
+                <p class="card-org">Pak-Turk Maarif</p>
+              </div>
+              <span class="card-period">Nov 2022</span>
+            </div>
+            <p class="card-desc">
               Designed all digital content and managed the online presence,
               ensuring tech support throughout the event.
             </p>
@@ -85,7 +133,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-center">
-          © 2026 Mamoon Chishti. All rights reserved.
+          2026 Mamoon Chishti. All rights reserved.
         </div>
         <div class="footer-right">
           <a href="#">GitHub</a>
