--- a/about.html
+++ b/about.html
@@ -13,205 +13,259 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
-    <header class="navbar">
-      <nav>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section class="about">
-      <div class="about-text">
-        <h2>About Me</h2>
-        <div class="about-info">
-          <p>
-            Computer Science student at FAST NUCES Lahore with a passion for
-            building robust applications and solving complex problems. With
-            expertise in full-stack development, system programming, and cloud
-            technologies, I create efficient and scalable solutions that make a
-            difference.
-          </p>
-        </div>
-
-        <h2>Professional Skillset</h2>
-        <div class="svgs">
-          <div>
-            <img src="./images/icons/cplusplus.svg" alt="C++" />
-          </div>
-
-          <div>
-            <img src="images/icons/python.svg" alt="python" />
-          </div>
-
-          <div>
-            <img src="./images/icons/nodedotjs.svg" alt="node" />
-          </div>
-
-          <div>
-            <img src="./images/icons/typescript.svg" alt="typescript" />
-          </div>
-
-          <div>
-            <img src="./images/icons/express.svg" alt="Express" />
-          </div>
-
-          <div>
-            <img src="./images/icons/nestjs.svg" alt="Nest" />
-          </div>
-
-          <div>
-            <img src="./images/icons/react.svg" alt="React" />
-          </div>
-
-          <div>
-            <img src="./images/icons/nextdotjs.svg" alt="Next" />
-          </div>
-
-          <div>
-            <img src="./images/icons/mongodb.svg" alt="MongoDB" />
-          </div>
-
-          <div>
-            <img src="./images/icons/postgresql.svg" alt="PostgreSQL" />
-          </div>
-        </div>
-
-        <h2>Softwares I use</h2>
-        <div class="svgs">
-          <div>
-            <img src="./images/icons/linux.svg" alt="linux" />
-          </div>
-
-          <div>
-            <img src="./images/icons/jupyter.svg" alt="jupyter" />
-          </div>
-
-          <div>
-            <img
-              src="images/icons/visual-studio-code-svgrepo-com.svg"
-              alt="vscode"
-            />
-          </div>
-        </div>
-
-        <h2>Services I offer</h2>
-        <div class="services">
-          <div class="service-card">
-            <div class="service-icon">
-              <img src="./images/icons/brackets-angle.svg" alt="fullstack" />
-            </div>
-
-            <h3>Full Stack Development</h3>
-            <p>
-              Building scalable web applications with Node.js, React, Next.js,
-              and modern databases like PostgreSQL and MongoDB.
-            </p>
-          </div>
-
-          <div class="service-card">
-            <div class="service-icon">
-              <img
-                src="./images/icons/device-mobile.svg"
-                alt="system-programming"
-              />
-            </div>
-
-            <h3>System Programming</h3>
-            <p>
-              Developing performance-critical and low-level software using C++,
-              C, and deep system-level concepts including memory management,
-              concurrency, and OS internals.
-            </p>
-          </div>
-
-          <div class="service-card">
-            <div class="service-icon">
-              <img
-                src="./images/icons/server.svg"
-                alt="restful-api-development"
-              />
-            </div>
-
-            <h3>RESTful API Development</h3>
-            <p>
-              Creating secure, maintainable, and scalable REST APIs using
-              Express.js and NestJS, with authentication, authorization, and
-              best-practice architecture.
-            </p>
-          </div>
-
-          <div class="service-card">
-            <div class="service-icon">
-              <img src="./images/icons/database.svg" alt="database-design" />
-            </div>
-
-            <h3>Database Architecture & Optimization</h3>
-            <p>
-              Designing and optimizing relational and non-relational databases,
-              focusing on schema design, indexing strategies, query
-              optimization, and data integrity.
-            </p>
-          </div>
-
-          <div class="service-card">
-            <div class="service-icon">
-              <img src="./images/icons/cloud-code.svg" alt="cloud" />
-            </div>
-
-            <h3>DevOps & Cloud Engineering</h3>
-            <p>
-              Designing, deploying, and maintaining reliable infrastructure with
-              Docker, CI/CD pipelines, Linux, cloud platforms (AWS/GCP/Azure),
-              and infrastructure automation for scalable production systems.
-            </p>
-          </div>
-
-          <div class="service-card">
-            <div class="service-icon">
-              <img src="./images/icons/clock-code.svg" alt="algorithms" />
-            </div>
-
-            <h3>Algorithms & Problem Solving</h3>
-            <p>
-              Strong background in data structures, algorithms, and
-              computational problem solving, with a focus on efficiency,
-              correctness, and scalability.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-center">
-          © 2026 Mamoon Chishti. All rights reserved.
-        </div>
-        <div class="footer-right">
-          <a href="https://github.com/mamoon-17" aria-label="GitHub">
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-              <path
-                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/mamoon-chishti-875b2127a/"
-            aria-label="LinkedIn"
+    <input type="checkbox" id="theme-toggle" />
+    <div class="page-wrapper">
+      <header class="navbar">
+        <nav>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <label
+          for="theme-toggle"
+          class="theme-toggle-btn"
+          aria-label="Toggle theme"
+        >
+          <svg
+            class="icon-sun"
+            viewBox="0 0 24 24"
+            width="22"
+            height="22"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
           >
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-              <path
-                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+            <circle cx="12" cy="12" r="5" />
+            <line x1="12" y1="1" x2="12" y2="3" />
+            <line x1="12" y1="21" x2="12" y2="23" />
+            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+            <line x1="1" y1="12" x2="3" y2="12" />
+            <line x1="21" y1="12" x2="23" y2="12" />
+            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+          </svg>
+          <svg
+            class="icon-moon"
+            viewBox="0 0 24 24"
+            width="22"
+            height="22"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+          </svg>
+        </label>
+      </header>
+
+      <section class="about">
+        <div class="about-text">
+          <h2>About Me</h2>
+          <div class="about-info">
+            <p>
+              Computer Science student at FAST NUCES Lahore with a passion for
+              building robust applications and solving complex problems. With
+              expertise in full-stack development, system programming, and cloud
+              technologies, I create efficient and scalable solutions that make
+              a difference.
+            </p>
+          </div>
+
+          <h2>Professional Skillset</h2>
+          <div class="svgs">
+            <div>
+              <img src="./images/icons/cplusplus.svg" alt="C++" />
+            </div>
+
+            <div>
+              <img src="images/icons/python.svg" alt="python" />
+            </div>
+
+            <div>
+              <img src="./images/icons/nodedotjs.svg" alt="node" />
+            </div>
+
+            <div>
+              <img src="./images/icons/typescript.svg" alt="typescript" />
+            </div>
+
+            <div>
+              <img src="./images/icons/express.svg" alt="Express" />
+            </div>
+
+            <div>
+              <img src="./images/icons/nestjs.svg" alt="Nest" />
+            </div>
+
+            <div>
+              <img src="./images/icons/react.svg" alt="React" />
+            </div>
+
+            <div>
+              <img src="./images/icons/nextdotjs.svg" alt="Next" />
+            </div>
+
+            <div>
+              <img src="./images/icons/mongodb.svg" alt="MongoDB" />
+            </div>
+
+            <div>
+              <img src="./images/icons/postgresql.svg" alt="PostgreSQL" />
+            </div>
+          </div>
+
+          <h2>Softwares I use</h2>
+          <div class="svgs">
+            <div>
+              <img src="./images/icons/linux.svg" alt="linux" />
+            </div>
+
+            <div>
+              <img src="./images/icons/jupyter.svg" alt="jupyter" />
+            </div>
+
+            <div>
+              <img
+                src="images/icons/visual-studio-code-svgrepo-com.svg"
+                alt="vscode"
               />
-            </svg>
-          </a>
+            </div>
+          </div>
+
+          <h2>Services I offer</h2>
+          <div class="services">
+            <div class="service-card">
+              <div class="service-icon">
+                <img src="./images/icons/brackets-angle.svg" alt="fullstack" />
+              </div>
+
+              <h3>Full Stack Development</h3>
+              <p>
+                Building scalable web applications with Node.js, React, Next.js,
+                and modern databases like PostgreSQL and MongoDB.
+              </p>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <img
+                  src="./images/icons/device-mobile.svg"
+                  alt="system-programming"
+                />
+              </div>
+
+              <h3>System Programming</h3>
+              <p>
+                Developing performance-critical and low-level software using
+                C++, C, and deep system-level concepts including memory
+                management, concurrency, and OS internals.
+              </p>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <img
+                  src="./images/icons/server.svg"
+                  alt="restful-api-development"
+                />
+              </div>
+
+              <h3>RESTful API Development</h3>
+              <p>
+                Creating secure, maintainable, and scalable REST APIs using
+                Express.js and NestJS, with authentication, authorization, and
+                best-practice architecture.
+              </p>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <img src="./images/icons/database.svg" alt="database-design" />
+              </div>
+
+              <h3>Database Architecture & Optimization</h3>
+              <p>
+                Designing and optimizing relational and non-relational
+                databases, focusing on schema design, indexing strategies, query
+                optimization, and data integrity.
+              </p>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <img src="./images/icons/cloud-code.svg" alt="cloud" />
+              </div>
+
+              <h3>DevOps & Cloud Engineering</h3>
+              <p>
+                Designing, deploying, and maintaining reliable infrastructure
+                with Docker, CI/CD pipelines, Linux, cloud platforms
+                (AWS/GCP/Azure), and infrastructure automation for scalable
+                production systems.
+              </p>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <img src="./images/icons/clock-code.svg" alt="algorithms" />
+              </div>
+
+              <h3>Algorithms & Problem Solving</h3>
+              <p>
+                Strong background in data structures, algorithms, and
+                computational problem solving, with a focus on efficiency,
+                correctness, and scalability.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </footer>
+      </section>
+
+      <footer class="footer">
+        <div class="footer-content">
+          <div class="footer-center">
+            © 2026 Mamoon Chishti. All rights reserved.
+          </div>
+          <div class="footer-right">
+            <a href="https://github.com/mamoon-17" aria-label="GitHub">
+              <svg
+                viewBox="0 0 24 24"
+                width="20"
+                height="20"
+                fill="currentColor"
+              >
+                <path
+                  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/mamoon-chishti-875b2127a/"
+              aria-label="LinkedIn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                width="20"
+                height="20"
+                fill="currentColor"
+              >
+                <path
+                  d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
