--- a/experience.html
+++ b/experience.html
@@ -13,148 +13,201 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
-    <header class="navbar">
-      <nav>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main class="experience-main">
-      <h1 class="exp-title">Experience & Education</h1>
-      <p class="exp-subtitle">
-        A chronological overview of my professional and academic journey
-      </p>
-
-      <!-- Education Section -->
-      <section class="exp-section">
-        <h2 class="section-heading">Education</h2>
-        <div class="exp-card">
-          <div class="card-header">
-            <div>
-              <h3 class="card-title">
-                Bachelor of Science in Computer Science
-              </h3>
-              <p class="card-org">FAST-NUCES, Lahore</p>
-            </div>
-            <span class="card-period">2023 - 2027</span>
-          </div>
-          <span class="status-tag">In Progress</span>
-        </div>
-      </section>
-
-      <!-- Work Experience Section -->
-      <section class="exp-section">
-        <h2 class="section-heading">Work Experience</h2>
-        <div class="exp-card">
-          <div class="card-header">
-            <div>
-              <h3 class="card-title">Full Stack Developer Intern</h3>
-              <p class="card-org">Vision Technologies</p>
-            </div>
-            <span class="card-period">Jun - Jul 2023</span>
-          </div>
-          <ul class="card-details">
-            <li>
-              Developed and maintained web applications using React, NestJS, and
-              PostgreSQL, contributing to key project features
-            </li>
-            <li>
-              Collaborated with development team to implement bug fixes,
-              optimize performance, and improve code quality
-            </li>
-            <li>
-              Participated in deployment process and conducted testing to ensure
-              smooth application functionality
-            </li>
-            <li>
-              Gained hands-on experience in full-stack development and agile
-              workflows
-            </li>
+    <input type="checkbox" id="theme-toggle" />
+    <div class="page-wrapper">
+      <header class="navbar">
+        <nav>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
-      </section>
-
-      <!-- Leadership Section -->
-      <section class="exp-section">
-        <h2 class="section-heading">Leadership & Activities</h2>
-        <div class="leadership-grid">
-          <div class="exp-card">
-            <div class="card-header">
-              <div>
-                <h3 class="card-title">President - Debate Society</h3>
-                <p class="card-org">Pak-Turk Maarif</p>
-              </div>
-              <span class="card-period">2021 - 2023</span>
-            </div>
-            <p class="card-desc">
-              Led debate training sessions, organized internal and external
-              events, and selected teams for national competitions to elevate
-              the school's debate culture.
-            </p>
-          </div>
-
-          <div class="exp-card">
-            <div class="card-header">
-              <div>
-                <h3 class="card-title">President - PTMUN'22</h3>
-                <p class="card-org">Pak-Turk Maarif</p>
-              </div>
-              <span class="card-period">Feb 2022</span>
-            </div>
-            <p class="card-desc">
-              Revived and led the school's flagship MUN conference, initiating
-              its return and overseeing all executive operations.
-            </p>
-          </div>
-
-          <div class="exp-card card-center">
-            <div class="card-header">
-              <div>
-                <h3 class="card-title">IT Director - PTMUN III</h3>
-                <p class="card-org">Pak-Turk Maarif</p>
-              </div>
-              <span class="card-period">Nov 2022</span>
-            </div>
-            <p class="card-desc">
-              Designed all digital content and managed the online presence,
-              ensuring tech support throughout the event.
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-center">
-          2026 Mamoon Chishti. All rights reserved.
-        </div>
-        <div class="footer-right">
-          <a href="https://github.com/mamoon-17" aria-label="GitHub">
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-              <path
-                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/mamoon-chishti-875b2127a/"
-            aria-label="LinkedIn"
+        </nav>
+        <label
+          for="theme-toggle"
+          class="theme-toggle-btn"
+          aria-label="Toggle theme"
+        >
+          <svg
+            class="icon-sun"
+            viewBox="0 0 24 24"
+            width="22"
+            height="22"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
           >
-            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-              <path
-                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
-              />
-            </svg>
-          </a>
+            <circle cx="12" cy="12" r="5" />
+            <line x1="12" y1="1" x2="12" y2="3" />
+            <line x1="12" y1="21" x2="12" y2="23" />
+            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+            <line x1="1" y1="12" x2="3" y2="12" />
+            <line x1="21" y1="12" x2="23" y2="12" />
+            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+          </svg>
+          <svg
+            class="icon-moon"
+            viewBox="0 0 24 24"
+            width="22"
+            height="22"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+          </svg>
+        </label>
+      </header>
+
+      <main class="experience-main">
+        <h1 class="exp-title">Experience & Education</h1>
+        <p class="exp-subtitle">
+          A chronological overview of my professional and academic journey
+        </p>
+
+        <!-- Education Section -->
+        <section class="exp-section">
+          <h2 class="section-heading">Education</h2>
+          <div class="exp-card">
+            <div class="card-header">
+              <div>
+                <h3 class="card-title">
+                  Bachelor of Science in Computer Science
+                </h3>
+                <p class="card-org">FAST-NUCES, Lahore</p>
+              </div>
+              <span class="card-period">2023 - 2027</span>
+            </div>
+            <span class="status-tag">In Progress</span>
+          </div>
+        </section>
+
+        <!-- Work Experience Section -->
+        <section class="exp-section">
+          <h2 class="section-heading">Work Experience</h2>
+          <div class="exp-card">
+            <div class="card-header">
+              <div>
+                <h3 class="card-title">Full Stack Developer Intern</h3>
+                <p class="card-org">Vision Technologies</p>
+              </div>
+              <span class="card-period">Jun - Jul 2023</span>
+            </div>
+            <ul class="card-details">
+              <li>
+                Developed and maintained web applications using React, NestJS,
+                and PostgreSQL, contributing to key project features
+              </li>
+              <li>
+                Collaborated with development team to implement bug fixes,
+                optimize performance, and improve code quality
+              </li>
+              <li>
+                Participated in deployment process and conducted testing to
+                ensure smooth application functionality
+              </li>
+              <li>
+                Gained hands-on experience in full-stack development and agile
+                workflows
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- Leadership Section -->
+        <section class="exp-section">
+          <h2 class="section-heading">Leadership & Activities</h2>
+          <div class="leadership-grid">
+            <div class="exp-card">
+              <div class="card-header">
+                <div>
+                  <h3 class="card-title">President - Debate Society</h3>
+                  <p class="card-org">Pak-Turk Maarif</p>
+                </div>
+                <span class="card-period">2021 - 2023</span>
+              </div>
+              <p class="card-desc">
+                Led debate training sessions, organized internal and external
+                events, and selected teams for national competitions to elevate
+                the school's debate culture.
+              </p>
+            </div>
+
+            <div class="exp-card">
+              <div class="card-header">
+                <div>
+                  <h3 class="card-title">President - PTMUN'22</h3>
+                  <p class="card-org">Pak-Turk Maarif</p>
+                </div>
+                <span class="card-period">Feb 2022</span>
+              </div>
+              <p class="card-desc">
+                Revived and led the school's flagship MUN conference, initiating
+                its return and overseeing all executive operations.
+              </p>
+            </div>
+
+            <div class="exp-card card-center">
+              <div class="card-header">
+                <div>
+                  <h3 class="card-title">IT Director - PTMUN III</h3>
+                  <p class="card-org">Pak-Turk Maarif</p>
+                </div>
+                <span class="card-period">Nov 2022</span>
+              </div>
+              <p class="card-desc">
+                Designed all digital content and managed the online presence,
+                ensuring tech support throughout the event.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <div class="footer-content">
+          <div class="footer-center">
+            2026 Mamoon Chishti. All rights reserved.
+          </div>
+          <div class="footer-right">
+            <a href="https://github.com/mamoon-17" aria-label="GitHub">
+              <svg
+                viewBox="0 0 24 24"
+                width="20"
+                height="20"
+                fill="currentColor"
+              >
+                <path
+                  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/mamoon-chishti-875b2127a/"
+              aria-label="LinkedIn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                width="20"
+                height="20"
+                fill="currentColor"
+              >
+                <path
+                  d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                />
+              </svg>
+            </a>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
